# DART

./: .gitignore  .readthedocs.yaml  404.html  CHANGELOG  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  CNAME  COPYRIGHT  COPYRIGHT.md  Doxyfile_wrf  LICENSE  RADIANCE_README  README  README.md  README.rst  README_rma_updates.txt  bob  changelog.rst  compile_it  conf.py  copyright.rst  index.html  index.rst  index.xml  model_mod.f90  model_mod.nml  note  readme.rst  sitemap.xml  test_dart.csh
.github/: pull_request_template.md
DART_LAB/: DART_LAB.html
FESOMMESH/: fesom_modules.F90  namelist.config
R/: PlotEnsTimeSeries.R  ReadASCIIObsSeq.R  ReadObsSeq.R  basic_checks.R
about/: index.html  index.xml
adaptive_inflate/: adaptive_inflate_mod.f90  adaptive_inflate_mod.html  adaptive_inflate_mod.nml  adaptive_inflate_nml.f90  fill_inflation_restart.f90  fill_inflation_restart.html
adjoint/: adjoint.f90  adjoint_mod.f90
assim_diag/: assim_diag.f90  assim_diag_mod.f90
assim_model/: arestart_pnetcdf_mod.f90  assim_model_mod.f90  assim_model_mod.html  assim_model_mod.nml  assim_model_mod_no_pnetcdf.f90
assim_model_tools/: assim_model.f90  assim_model_tools.f90
assim_tools/: assim_region.f90  assim_region.html  assim_tools.f90  assim_tools_mod.f90  assim_tools_mod.html  assim_tools_mod.nml  assim_tools_mod.pf.f90  assim_tools_smoother_mod.f90  assim_tools_smoother_mod.html  kevin_ex14.f90  option7.m
beta1/: index.html
build_templates/: README.md  buildconvfunctions.sh  buildfunctions.sh  buildpreprocess.sh  front_node_executables_mkmf.template  mkmf  mkmf.html  mkmf.rst  mkmf.template  mkmf.template.AIRS.gfortran  mkmf.template.AIRS.intel  mkmf.template.absoft.osx  mkmf.template.cce  mkmf.template.esmf-container-8.6.1  mkmf.template.g95  mkmf.template.gfortran  mkmf.template.gfortran.esmf  mkmf.template.gfortran.osx  mkmf.template.ifx.linux  mkmf.template.intel.linux  mkmf.template.intel.osx  mkmf.template.lahey.linux  mkmf.template.nag.linux  mkmf.template.nvhpc  mkmf.template.pathscale.linux  mkmf.template.pgi.linux  mkmf.template.pgi.osx  mkmf.template.quikscat.gfortran  mkmf.template.quikscat.intel  mkmf.template.rttov.gfortran  mkmf.template.rttov.intel  mkmf.template.sgi.altix  mkmf.template.xlf.aix  nodes_executables_mkmf.template  version_mod.F90
pytools/pyfortran/: LICENSE  README.md  pyproject.toml
pytools/pyfortran/src/fortran_module_usage/: check_fortran_module_usage.py
pytools/pyfortran/tests/: test_fortran_module_usage.py
pytools/pyjedi/: README.md  pyproject.toml
pytools/pyjedi/src/pyjedi/: __init__.py  _utils.py  ioda2obsq.py
pytools/pyjedi/tests/: amsua_n19_obs_2018041500.10.cdl  obs_seq.amsua.out.ref  obs_seq.radiosonde.out.ref  obsq.amsua.yaml  obsq.radiosonde.yaml  sondes_obs_2018041500.200.cdl  test_pyjedi.py
pytools/pyqceff/: README.md  pyproject.toml
pytools/pyqceff/src/pyqceff/: display_qceff_table.py
pytools/pyqceff/tests/: test.csv  test_pyqceff.py
pytools/pyutils_module_usage/: README.md  pyproject.toml
pytools/pyutils_module_usage/src/pyutils-module_usage/: check_fortran_module_usage.py  public.py
pytools/pyutils_module_usage/src/pyutils_module_usage/: check_fortran_module_usage.py
(+15175 files in other folders)
